Update command data for Kia/Stinger

--- a/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -1,6 +1,517 @@
 command_id: 7A0.7A8.22C00B|fc=1
 test_cases:
 - expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 1
+    KIA_RR_INVALID: 1
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TB_RR: 3V+
+    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 52
+    KIA_TPMS_TEMP_RR: 2
+    KIA_TP_FL: 0
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0
+    KIA_TP_RL_PRE21: 0
+    KIA_TP_RR: 0.4
+    KIA_TP_RR_PRE21: 0
+    KIA_TT_FL: -50
+    KIA_TT_FR: -50
+    KIA_TT_FR_PRE21: -50
+    KIA_TT_RL: -48
+    KIA_TT_RL_PRE21: -50
+    KIA_TT_RR: 2
+    KIA_TT_RR_PRE21: -50
+    KIA_TW_FL: 1
+    KIA_TW_FR: 0
+    KIA_TW_RL: 1
+    KIA_TW_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A82200020000000200
+    7A8230000023496AB96
+    7A824AB96AB96ABAAAA
+- expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 1
+    KIA_RR_INVALID: 1
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TB_RR: 3V+
+    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 64
+    KIA_TPMS_TEMP_RR: 2
+    KIA_TP_FL: 0
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0
+    KIA_TP_RL_PRE21: 0
+    KIA_TP_RR: 0.4
+    KIA_TP_RR_PRE21: 0
+    KIA_TT_FL: -50
+    KIA_TT_FR: -50
+    KIA_TT_FR_PRE21: -50
+    KIA_TT_RL: -48
+    KIA_TT_RL_PRE21: -50
+    KIA_TT_RR: 14
+    KIA_TT_RR_PRE21: -50
+    KIA_TW_FL: 1
+    KIA_TW_FR: 0
+    KIA_TW_RL: 1
+    KIA_TW_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A82200020000000200
+    7A8230000024096AB96
+    7A824AB96AB96ABAAAA
+- expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 1
+    KIA_RR_INVALID: 0
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 61
+    KIA_TPMS_TEMP_RR: 2
+    KIA_TP_FL: 0
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0
+    KIA_TP_RL_PRE21: 39.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 0
+    KIA_TT_FL: -50
+    KIA_TT_FR: -50
+    KIA_TT_FR_PRE21: -50
+    KIA_TT_RL: -48
+    KIA_TT_RL_PRE21: 10
+    KIA_TT_RR: 11
+    KIA_TT_RR_PRE21: -50
+    KIA_TW_FL: 1
+    KIA_TW_FR: 0
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A822000200000002C6
+    7A8233C04003D96AB96
+    7A824AB96AB96AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 1
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 3V+
+    KIA_TB_RR: 3V+
+    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 52
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 0
+    KIA_TP_FR: 12.6
+    KIA_TP_FR_PRE21: 35.8
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 0
+    KIA_TP_RR: 0.4
+    KIA_TP_RR_PRE21: 39.8
+    KIA_TT_FL: -50
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 13
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: -50
+    KIA_TT_RR: 2
+    KIA_TT_RR_PRE21: 13
+    KIA_TW_FL: 1
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A8218000000002B33F
+    7A8220400C73F040000
+    7A8230000023496AB96
+    7A824AE96AE96ABAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 56
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 54
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 31.6
+    KIA_TP_FR: 11.2
+    KIA_TP_FR_PRE21: 35
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 39.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39
+    KIA_TT_FL: 6
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 6
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 5
+    KIA_TT_RR: 4
+    KIA_TT_RR_PRE21: 6
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A821809E380400AF38
+    7A8220400C3380400C5
+    7A8233704003697AE97
+    7A824AE97AE97AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 1
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 59
+    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 57
+    KIA_TPMS_TEMP_RR: 2
+    KIA_TP_FL: 31.6
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0
+    KIA_TP_RL_PRE21: 39.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 0
+    KIA_TT_FL: 9
+    KIA_TT_FR: -50
+    KIA_TT_FR_PRE21: -50
+    KIA_TT_RL: -48
+    KIA_TT_RL_PRE21: 9
+    KIA_TT_RR: 7
+    KIA_TT_RR_PRE21: -50
+    KIA_TW_FL: 0
+    KIA_TW_FR: 0
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A821809E3B04000000
+    7A822000200000002C5
+    7A8233B04003996AE96
+    7A824AB96AB96AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 57
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 54
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 31.8
+    KIA_TP_FR: 11.4
+    KIA_TP_FR_PRE21: 35.4
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 39.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39
+    KIA_TT_FL: 7
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 7
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 5
+    KIA_TT_RR: 4
+    KIA_TT_RR_PRE21: 6
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A821809F390400B139
+    7A8220400C3380400C5
+    7A8233704003699AE99
+    7A824AE97AE97AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 59
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 54
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 32
+    KIA_TP_FR: 11.6
+    KIA_TP_FR_PRE21: 35.8
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 39.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.4
+    KIA_TT_FL: 9
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 8
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 6
+    KIA_TT_RR: 4
+    KIA_TT_RR_PRE21: 7
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A03B0400B33A
+    7A8220400C5390400C7
+    7A823380400369AB19A
+    7A824AF99AE97AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 58
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 54
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 32.2
+    KIA_TP_FR: 11.6
+    KIA_TP_FR_PRE21: 35.8
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 39.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.4
+    KIA_TT_FL: 8
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 8
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 6
+    KIA_TT_RR: 4
+    KIA_TT_RR_PRE21: 6
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A13A0400B33A
+    7A8220400C5380400C7
+    7A823380400369AAF9A
+    7A824AF97AE97AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 63
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 52
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 32.2
+    KIA_TP_FR: 12.8
+    KIA_TP_FR_PRE21: 35.8
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 40
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 40
+    KIA_TT_FL: 13
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 14
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 12
+    KIA_TT_RR: 2
+    KIA_TT_RR_PRE21: 13
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A13F0400B340
+    7A8220400C83F0400C8
+    7A8233E04003496AE96
+    7A824AE96AE96AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 64
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 62
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 32.6
+    KIA_TP_FR: 12.8
+    KIA_TP_FR_PRE21: 36.4
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 40.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 40.4
+    KIA_TT_FL: 14
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 14
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 13
+    KIA_TT_RR: 12
+    KIA_TT_RR_PRE21: 13
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A3400500B640
+    7A8220400CA3F0400CB
+    7A8233F04003E97AE97
+    7A824AE97AE97AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 67
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 57
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 33.2
+    KIA_TP_FR: 13.2
+    KIA_TP_FR_PRE21: 36.4
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 41
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 40.6
+    KIA_TT_FL: 17
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 16
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 16
+    KIA_TT_RR: 7
+    KIA_TT_RR_PRE21: 16
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A6430400B642
+    7A8220400CB420400CD
+    7A823420400399EB49C
+    7A824B49CB49CB4AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 67
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 57
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 33.2
+    KIA_TP_FR: 13.4
+    KIA_TP_FR_PRE21: 37
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 41.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 40.8
+    KIA_TT_FL: 17
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 17
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 16
+    KIA_TT_RR: 7
+    KIA_TT_RR_PRE21: 16
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A6430400B943
+    7A8220400CC420400CF
+    7A823420400399EB49E
+    7A824B49CB49CB4AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 74
+    KIA_TPMS_TEMP_FR: 5
+    KIA_TPMS_TEMP_RL: 66
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 33.8
+    KIA_TP_FR: 14.8
+    KIA_TP_FR_PRE21: 37.8
+    KIA_TP_RL: 0
+    KIA_TP_RL_PRE21: 43.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 43
+    KIA_TT_FL: 24
+    KIA_TT_FR: -45
+    KIA_TT_FR_PRE21: 24
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 0
+    KIA_TT_RR: 16
+    KIA_TT_RR_PRE21: 0
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A94A0400BD4A
+    7A8220500D7320000D9
+    7A823320000429CB39C
+    7A824B396AB96ABAAAA
+- expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
     KIA_RL_INVALID: 0
@@ -72,42 +583,6 @@ test_cases:
     7A8220600BC5E0600BB
     7A8235F06004FA3BBA1
     7A824B9A0B8A1B9AAAA
-- expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 97
-    KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: 79
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 35.8
-    KIA_TP_FR: 18.8
-    KIA_TP_FR_PRE21: 35.6
-    KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 37.6
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 37.6
-    KIA_TT_FL: 47
-    KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 44
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 45
-    KIA_TT_RR: 29
-    KIA_TT_RR_PRE21: 44
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
-    7A82180B3610600B25E
-    7A8220600BC5E0600BC
-    7A8235F06004FA3BBA0
-    7A824B8A0B8A1B9AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
