--- a/tests/test_cases/2021/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E001.yaml
@@ -1,6 +1,18 @@
 command_id: 7E0.7E8.22E001
 test_cases:
 - expected_values:
+    KIA_EIT: 41.25
+    KIA_EOT: 93.75354
+    KIA_IAT: 41.25223
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100B60036000049
+    7E822000000005001BA
+    7E82363002F1C000045
+    7E82400C8FD03520000
+    7E825350177BD640000
+    7E826A00C0000AAAAAA
+- expected_values:
     KIA_EIT: 45
     KIA_EOT: 99.00368
     KIA_IAT: 45.00233
@@ -84,3 +96,291 @@ test_cases:
     7E82400CBFC036B0000
     7E82524017AC3640000
     7E82640239008AAAAAA
+- expected_values:
+    KIA_EIT: 13.5
+    KIA_EOT: 51.75249
+    KIA_IAT: 13.50154
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D1CF34701252
+    7E8220000000038017D
+    7E8235A0046370000AF
+    7E8240096FD034C0000
+    7E8253D025285640000
+    7E826C0258409AAAAAA
+- expected_values:
+    KIA_EIT: 6.75
+    KIA_EOT: 15.00158
+    KIA_IAT: 6.75137
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CE33B41278
+    7E82200000000A6005E
+    7E82329C029150000A0
+    7E8240168FD03440000
+    7E82580024954640000
+    7E826C0290B0BAAAAAA
+- expected_values:
+    KIA_EIT: 8.25
+    KIA_EOT: 21.00173
+    KIA_IAT: 8.25141
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CE34B00C4F
+    7E82200000000ED002B
+    7E82342002B17000069
+    7E8240170FD03460000
+    7E82572024B5C640000
+    7E826E027540AAAAAAA
+- expected_values:
+    KIA_EIT: 6.75
+    KIA_EOT: 24.75182
+    KIA_IAT: 6.75137
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF33141273
+    7E822000000009C0031
+    7E82326802712000053
+    7E8240174FD03440000
+    7E8257E024961640000
+    7E826E027540AAAAAAA
+- expected_values:
+    KIA_EIT: 7.5
+    KIA_EOT: 30.00195
+    KIA_IAT: 7.50139
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF33F81170
+    7E82200000000A100E7
+    7E82327002813000038
+    7E8240178FD03440000
+    7E8257C024A68640000
+    7E826C027480AAAAAAA
+- expected_values:
+    KIA_EIT: 12
+    KIA_EOT: 17.25163
+    KIA_IAT: 12.0015
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF34881277
+    7E82200000000A100C2
+    7E8232700291400008F
+    7E824016BFD034C0000
+    7E8254B025057640000
+    7E826002A240BAAAAAA
+- expected_values:
+    KIA_EIT: 6.75
+    KIA_EOT: 33.75204
+    KIA_IAT: 6.75137
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF34D41C52
+    7E822000000003201C5
+    7E8235980483B0000FC
+    7E8240083FD03460000
+    7E8258002496D640000
+    7E826804DAE18AAAAAA
+- expected_values:
+    KIA_EIT: 8.25
+    KIA_EOT: 29.25193
+    KIA_IAT: 8.25141
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF34DC124A
+    7E82200000000770044
+    7E8231900230D000034
+    7E8240178FD03460000
+    7E82571024B67640000
+    7E8264028790AAAAAAA
+- expected_values:
+    KIA_EIT: 12.75
+    KIA_EOT: 36.75212
+    KIA_IAT: 12.75152
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF36582368
+    7E8220000000045015E
+    7E8236040554A00000A
+    7E8240180FD03480000
+    7E82545025171640000
+    7E826802A540BAAAAAA
+- expected_values:
+    KIA_EIT: 12.75
+    KIA_EOT: 23.25178
+    KIA_IAT: 12.75152
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2CF36601274
+    7E82200000000A400C1
+    7E82328002914000060
+    7E8240172FD034A0000
+    7E8254302515F640000
+    7E8266029E60AAAAAAA
+- expected_values:
+    KIA_EIT: 18.75
+    KIA_EOT: 42.00225
+    KIA_IAT: 18.75167
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D1340C0F46
+    7E822000000007A008B
+    7E8231AC0200A0000DF
+    7E824008AFD034E0000
+    7E82504025978640000
+    7E82660256009AAAAAA
+- expected_values:
+    KIA_EIT: 16.5
+    KIA_EOT: 56.25261
+    KIA_IAT: 16.50161
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D134141552
+    7E822000000007800D9
+    7E8231980230D000094
+    7E824009FFD034E0000
+    7E8251A02568B640000
+    7E8260027FF09AAAAAA
+- expected_values:
+    KIA_EIT: 19.5
+    KIA_EOT: 24.75182
+    KIA_IAT: 19.50169
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D134381274
+    7E82200000000A100F3
+    7E82327402813000057
+    7E8240173FD03500000
+    7E825FA015A61640000
+    7E8264028790AAAAAAA
+- expected_values:
+    KIA_EIT: 12
+    KIA_EOT: 51.75249
+    KIA_IAT: 12.0015
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D135301852
+    7E822000000001501E9
+    7E8234FC03828000095
+    7E824009FFD034C0000
+    7E8254D025085640000
+    7E826C0242309AAAAAA
+- expected_values:
+    KIA_EIT: 21
+    KIA_EOT: 42.00225
+    KIA_IAT: 21.00173
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D1356C154C
+    7E82200000000FD007E
+    7E8234700321F0000E0
+    7E8240089FD03530000
+    7E825EF015C78640000
+    7E8268026CE09AAAAAA
+- expected_values:
+    KIA_EIT: 39.75
+    KIA_EOT: 96.0036
+    KIA_IAT: 39.75219
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D13698124D
+    7E82200000000750092
+    7E8231800210A000040
+    7E82400CCFD03520000
+    7E825400175C0640000
+    7E826C01F3A07AAAAAA
+- expected_values:
+    KIA_EIT: 37.5
+    KIA_EOT: 95.25358
+    KIA_IAT: 37.50214
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D136F01151
+    7E82200000000840032
+    7E8231F401F08000045
+    7E82400C8FD03520000
+    7E825570172BF640000
+    7E826E020A807AAAAAA
+- expected_values:
+    KIA_EIT: 49.5
+    KIA_EOT: 92.25351
+    KIA_IAT: 49.50244
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D136F01367
+    7E82200000000B1005A
+    7E8232C002914000052
+    7E82400BEFD03530000
+    7E825FD0082BB640000
+    7E82640206B07AAAAAA
+- expected_values:
+    KIA_EIT: 12.75
+    KIA_EOT: 14.25156
+    KIA_IAT: 12.75152
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D2D23404178E
+    7E82200000000D7006D
+    7E8233A4033210000F7
+    7E824015BFD034C0000
+    7E82545025153640000
+    7E826E029170BAAAAAA
+- expected_values:
+    KIA_EIT: 6.75
+    KIA_EOT: 9.75144
+    KIA_IAT: 6.75137
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4CF33301378
+    7E82200000000A90005
+    7E8232B802A160000E0
+    7E824015EFD03440000
+    7E8257F02494D640000
+    7E826A04C5918AAAAAA
+- expected_values:
+    KIA_EIT: 47.25
+    KIA_EOT: 96.75362
+    KIA_IAT: 47.25238
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4CF365C0F51
+    7E82200000000BE0016
+    7E82333002611000047
+    7E82400C6FD03520000
+    7E82509017FC1640000
+    7E826601F1607AAAAAA
+- expected_values:
+    KIA_EIT: 36
+    KIA_EOT: 45.00233
+    KIA_IAT: 36.0021
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4D136480F61
+    7E82200000000910043
+    7E8232240240E0000F5
+    7E8240085FD03500000
+    7E8255F01707C640000
+    7E826E0259109AAAAAA
+- expected_values:
+    KIA_EIT: 12
+    KIA_EOT: 54.00255
+    KIA_IAT: 12.0015
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4D137541452
+    7E822000000008B0019
+    7E8232000250F0000A4
+    7E824009AFD03480000
+    7E8254A025088640000
+    7E8264027170AAAAAAA
+- expected_values:
+    KIA_EIT: 20.25
+    KIA_EOT: 57.00263
+    KIA_IAT: 20.25171
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D5D234381652
+    7E822000000008800FB
+    7E8231E00250F000087
+    7E82400A3FD03540000
+    7E825F8015B8C640000
+    7E8268026CE09AAAAAA
