--- a/tests/test_cases/2021/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E00A.yaml
@@ -1,6 +1,14 @@
 command_id: 7E0.7E8.22E00A
 test_cases:
 - expected_values:
+    KIA_KNOCK_LEARN_1: 24.8
+    KIA_KNOCK_RETARD_1: -14
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 20.4
+  response: "7E8 10 18 62 E0 0A 7F 07 00 \n7E8 21 00 36 00 9B 20 5C 00 \n7E8 22 33
+    51 BA 80 BF 66 03 \n7E8 23 5A D0 20 7C AA AA AA "
+- expected_values:
     KIA_KNOCK_LEARN_1: 14.8
     KIA_KNOCK_RETARD_1: -10.6
     KIA_KNOCK_RETARD_2: -6.4
@@ -12,17 +20,6 @@ test_cases:
     7E8224C62CBE0AAC102
     7E8235A791F4AAAAAAA
 - expected_values:
-    KIA_KNOCK_LEARN_1: 14.8
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -17.2
-    KIA_KNOCK_RETARD_4: -12.8
-  response: |-
-    7E8101862E00A7F0700
-    7E8210003007D1F9300
-    7E8224C62CBE0AAC002
-    7E8235A791F4AAAAAAA
-- expected_values:
     KIA_KNOCK_LEARN_1: 16.6
     KIA_KNOCK_RETARD_1: -10.6
     KIA_KNOCK_RETARD_2: -6.4
@@ -31,17 +28,6 @@ test_cases:
   response: |-
     7E8101862E00A7F0700
     7E8210004007C1F9300
-    7E8224C62CBE0AAC002
-    7E8235A791F53AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 16.6
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -17.2
-    KIA_KNOCK_RETARD_4: -12.8
-  response: |-
-    7E8101862E00A7F0700
-    7E8210005007C1F9300
     7E8224C62CBE0AAC002
     7E8235A791F53AAAAAA
 - expected_values:
@@ -56,24 +42,167 @@ test_cases:
     7E8224C62CBE0AABF02
     7E8235A791F42AAAAAA
 - expected_values:
-    KIA_KNOCK_LEARN_1: 16.6
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -17.2
-    KIA_KNOCK_RETARD_4: -12.8
+    KIA_KNOCK_LEARN_1: 13.2
+    KIA_KNOCK_RETARD_1: -13
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 18.6
   response: |-
     7E8101862E00A7F0700
-    7E821000600791F9300
-    7E8224C62CBE0AAC002
-    7E8235A791F53AAAAAA
+    7E821000900D2207200
+    7E8223651BF80BF5D03
+    7E8235AD02042AAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 21.4
+    KIA_KNOCK_RETARD_1: -13.6
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 11.2
+  response: |-
+    7E8101862E00A7F0700
+    7E821000E009D205F00
+    7E8223451BC80BF3803
+    7E8235AD0206BAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 24.8
+    KIA_KNOCK_RETARD_1: -13
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 19.4
+  response: |-
+    7E8101862E00A7F0700
+    7E821000E00C5207200
+    7E8223651BF80BF6103
+    7E8235AD0207CAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 24.8
+    KIA_KNOCK_RETARD_1: -13.6
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 11
+  response: |-
+    7E8101862E00A7F0700
+    7E821000F00B1205F00
+    7E8223451BC80BF3703
+    7E8235AD0207CAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 21.4
+    KIA_KNOCK_RETARD_1: -13.6
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 11
+  response: |-
+    7E8101862E00A7F0700
+    7E821001000BB205F00
+    7E8223451BC80BF3703
+    7E8235AD0206BAAAAAA
 - expected_values:
     KIA_KNOCK_LEARN_1: 11.6
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -17.2
-    KIA_KNOCK_RETARD_4: -12.8
+    KIA_KNOCK_RETARD_1: -13
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 19
   response: |-
     7E8101862E00A7F0700
-    7E821000700771F9300
-    7E8224C62CBE0AAC002
-    7E8235A791F3AAAAAAA
+    7E821001100D1207200
+    7E8223651BF80BF5F03
+    7E8235AD0203AAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 11.6
+    KIA_KNOCK_RETARD_1: -13.4
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -11.8
+    KIA_KNOCK_RETARD_4: 7.2
+  response: |-
+    7E8101862E00A7F0700
+    7E82100130032216800
+    7E8223551BD80C52403
+    7E8235A34213AAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 14.8
+    KIA_KNOCK_RETARD_1: -12.8
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 12.4
+  response: |-
+    7E8101862E00A7F0700
+    7E821001300D3207100
+    7E8223651C080BF3E03
+    7E8235AD0204AAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 18.2
+    KIA_KNOCK_RETARD_1: -13.8
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 11.2
+  response: |-
+    7E8101862E00A7F0700
+    7E821001700CF206200
+    7E8223451BB80BF3803
+    7E8235AD0205BAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: -24.8
+    KIA_KNOCK_RETARD_1: -12.8
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 19.8
+  response: |-
+    7E8101862E00A7F0700
+    7E821001B0008216800
+    7E8223851C080BF6303
+    7E8235AD02084AAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: -23.2
+    KIA_KNOCK_RETARD_1: -13.6
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 8.2
+  response: |-
+    7E8101862E00A7F0700
+    7E821002F00B01F5D00
+    7E8223451BC80BF2903
+    7E8235AD0208CAAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 13.2
+    KIA_KNOCK_RETARD_1: -13.4
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 2.2
+  response: |-
+    7E8101862E00A7F0700
+    7E821003300E0206300
+    7E8223751BD80BF0B03
+    7E8235AD02042AAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: -24.8
+    KIA_KNOCK_RETARD_1: -14
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 20.8
+  response: |-
+    7E8101862E00A7F0700
+    7E821003A0076205C00
+    7E8223351BA80BF6803
+    7E8235AD02084AAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: 23.2
+    KIA_KNOCK_RETARD_1: -12.8
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: 10
+    KIA_KNOCK_RETARD_4: -10.8
+  response: |-
+    7E8101862E00A7F0700
+    7E821005CFF64197100
+    7E8223651C08032CA00
+    7E8235A701774AAAAAA
+- expected_values:
+    KIA_KNOCK_LEARN_1: -23.2
+    KIA_KNOCK_RETARD_1: -13
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 12.4
+  response: |-
+    7E8101862E00A7F0700
+    7E82100F100DB206600
+    7E8223751BF80BF3E03
+    7E8235AD0208CAAAAAA
