--- a/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
@@ -1,6 +1,48 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
+    KIA_TURBO_BOOST: 1.11877
+    KIA_WG_DUTY: 71.93103
+    KIA_WG_POSITION: 0.61036
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.18166
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000002A9D2F
+    7E8229C2F5325A8095D
+    7E82309A10DDC0E350A
+    7E82419000000A01000
+    7E82500000079000000
+    7E826A44D5F18000000
+    7E827000000581E405C
+    7E82812006436663600
+    7E829220027401C0019
+    7E82A801FFF00000080
+    7E82B5E99F9C3366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.12478
+    KIA_WG_DUTY: 72.6421
+    KIA_WG_POSITION: 396.4538
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.18166
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000002AA22F
+    7E822A12FE426FB0862
+    7E8230CCF0FA30F400C
+    7E82424000000A01000
+    7E82500000079000000
+    7E826084EF019000000
+    7E827000000A01E405C
+    7E828FBFDBA36663600
+    7E829220027401C0019
+    7E82A801FFF00000060
+    7E82B5DC60084366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
     KIA_TURBO_BOOST: 1.1801
     KIA_WG_DUTY: 72.66041
     KIA_WG_POSITION: 0.79957
@@ -22,25 +64,88 @@ test_cases:
     7E82CE029202F401D40
     7E82D1DAAAAAAAAAAAA
 - expected_values:
-    KIA_TURBO_BOOST: 1.20535
-    KIA_WG_DUTY: 72.66346
-    KIA_WG_POSITION: 0.79957
+    KIA_TURBO_BOOST: 1.60099
+    KIA_WG_DUTY: 68.85481
+    KIA_WG_POSITION: 5.48714
     KIA_WG_SETPOINT: 84.99886
-    KIA_WG_VOLTAGE: 1.36233
+    KIA_WG_VOLTAGE: 1.16701
   response: |-
     7E8105B62E021FE9FCE
-    7E821FF0000002AE52F
-    7E822E32F10266B0955
-    7E8230A0D0C8E0CC40A
-    7E8240C000000A01000
+    7E821FF0000002C2E32
+    7E8222D32C82E3D090A
+    7E82313DC1D921DDB12
+    7E82401011B00A01000
     7E82500000079000000
-    7E826D34D1C19000000
-    7E8270000002022E05D
-    7E82802008336663620
-    7E82926E02A801D601A
-    7E82A4025FF000000A0
-    7E82B6107F8D6366636
-    7E82CE029202F401D40
+    7E8260150D421000000
+    7E827000000801DE058
+    7E82822038336663600
+    7E829220027401C0019
+    7E82AA01EFF00000080
+    7E82B5A8DF600376636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.79287
+    KIA_WG_DUTY: 68.78767
+    KIA_WG_POSITION: 0.64088
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.1426
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF000020298E2E
+    7E8228D2E5A250E0960
+    7E8230BE00BF40B730B
+    7E82404000000A01000
+    7E82500000079000000
+    7E826A54D6618000000
+    7E827000000001D4058
+    7E8280C006936663600
+    7E829220027401C0019
+    7E82AC01EFF00000080
+    7E82B5A24F7F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.18731
+    KIA_WG_DUTY: 69.12947
+    KIA_WG_POSITION: 2.16678
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15236
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000202AD62F
+    7E822D52F03280D09B8
+    7E8230C91117C11A80C
+    7E8243C000000A01000
+    7E82500000079000000
+    7E826504E0F1B000000
+    7E827000000601D8058
+    7E8287C016336663600
+    7E829220027401C0019
+    7E82AA01EFF00000060
+    7E82B5A57F7F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.20896
+    KIA_WG_DUTY: 69.41634
+    KIA_WG_POSITION: 399.44457
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15724
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000202AE82F
+    7E822E72FE125BF099C
+    7E8230B05117312950C
+    7E82438000000A01000
+    7E82500000079000000
+    7E826C74DED18000000
+    7E827000000201DA058
+    7E828DAFFA436663600
+    7E829220027401C0019
+    7E82A601EFF00000080
+    7E82B59FF0248366636
+    7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
     KIA_TURBO_BOOST: 1.23181
@@ -85,6 +190,153 @@ test_cases:
     7E82CE029202F401D40
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TURBO_BOOST: 1.23541
+    KIA_WG_DUTY: 69.06233
+    KIA_WG_POSITION: 393.32876
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.16701
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000202AFE2F
+    7E822FD2F57283E0998
+    7E8230B32108610D40B
+    7E8242D000000A01000
+    7E82500000079000000
+    7E826654E631B000000
+    7E827000000601DE058
+    7E82866FBBA36663600
+    7E829220027401C0019
+    7E82AC01EFF000000A0
+    7E82B5A97F700376636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.27269
+    KIA_WG_DUTY: 68.79988
+    KIA_WG_POSITION: 399.24315
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15236
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000202B1D31
+    7E8221A31C02D1209F6
+    7E82310BA1A241A9710
+    7E824C1000000A01000
+    7E82500000079000000
+    7E826BF4FCC20000000
+    7E827000000201D8058
+    7E82810FF8336663600
+    7E829220027401C0019
+    7E82A601EFF00000080
+    7E82B599D0349366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.66954
+    KIA_WG_DUTY: 68.39094
+    KIA_WG_POSITION: 393.38369
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.12795
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000202C6732
+    7E8226632372AE008BA
+    7E82312AB1FFE1DBC11
+    7E82428010000A01000
+    7E82500000079000000
+    7E826DD4E431D000000
+    7E827000000401CE057
+    7E8288AFBC336663600
+    7E829220027401C0019
+    7E82A801EFF00000040
+    7E82B5AD4F6F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.82053
+    KIA_WG_DUTY: 72.61158
+    KIA_WG_POSITION: 396.1181
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.19142
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00004029A52E
+    7E822A42E4C25560B1C
+    7E82307280748093809
+    7E82400000000A01000
+    7E82500000079000000
+    7E826A24D5818000000
+    7E827000000581E805C
+    7E828F1FD8336663600
+    7E829220027401C0019
+    7E82A801FFF00000060
+    7E82B5E41FABA366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.84218
+    KIA_WG_DUTY: 68.00336
+    KIA_WG_POSITION: 1.20241
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.12306
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00004029B72E
+    7E822B62E68250C09AD
+    7E82307AD07D907D907
+    7E82400000000A01000
+    7E82500000079000000
+    7E826A94D7418000000
+    7E8270000001E1CC057
+    7E8280B00C536663600
+    7E829220027401C0019
+    7E82A601EFF00000020
+    7E82B5A20F8F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.84218
+    KIA_WG_DUTY: 68.63813
+    KIA_WG_POSITION: 396.70405
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.12795
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00004029B72E
+    7E822B62E682513098A
+    7E823078607B907BD07
+    7E82400000000A01000
+    7E82500000079000000
+    7E826A94D7418000000
+    7E8270000001E1CE057
+    7E828DBFDE336663600
+    7E829220027401C0019
+    7E82A601EFF00000020
+    7E82B5A0FF8F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.88306
+    KIA_WG_DUTY: 69.48348
+    KIA_WG_POSITION: 5.13313
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.13771
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00004029D92E
+    7E822D92E75255C097F
+    7E823077107E107EF07
+    7E82400000000A01000
+    7E82500000079000000
+    7E826AC4D8118000000
+    7E827000000201D2058
+    7E828F0034936663600
+    7E829220027401C0019
+    7E82A601EFF00000060
+    7E82B597A0349366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
     KIA_TURBO_BOOST: 0.95401
     KIA_WG_DUTY: 72.67872
     KIA_WG_POSITION: 12.93965
@@ -106,44 +358,443 @@ test_cases:
     7E82CE029202F401D40
     7E82D1DAAAAAAAAAAAA
 - expected_values:
-    KIA_TURBO_BOOST: 0.97566
-    KIA_WG_DUTY: 73.0724
-    KIA_WG_POSITION: 396.12421
+    KIA_TURBO_BOOST: 1.30516
+    KIA_WG_DUTY: 72.49256
+    KIA_WG_POSITION: 396.1181
     KIA_WG_SETPOINT: 84.99886
-    KIA_WG_VOLTAGE: 1.36233
+    KIA_WG_VOLTAGE: 1.18654
   response: |-
     7E8105B62E021FE9FCE
-    7E821FF0000402A2630
-    7E82225301026390912
-    7E82307320987095307
-    7E82405000000A01000
+    7E821FF0000402B3831
+    7E82237318F2BB30808
+    7E8230FB31867173E0E
+    7E8249F000000A01000
     7E82500000079000000
-    7E826D34D1C19000000
-    7E8270000008022E05D
-    7E82888FD8436663620
-    7E82926E02A801D601A
-    7E82A8825FF00000040
-    7E82B61ECF3EB366636
-    7E82CE029202F401D40
+    7E826334F9B1E000000
+    7E827000000581E605C
+    7E828CAFD8336663600
+    7E829220027401C0019
+    7E82A801FFF00000060
+    7E82B5E41FABA366636
+    7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
-    KIA_TURBO_BOOST: 1.02376
-    KIA_WG_DUTY: 74.07645
-    KIA_WG_POSITION: 392.00427
+    KIA_TURBO_BOOST: 0.89148
+    KIA_WG_DUTY: 68.88228
+    KIA_WG_POSITION: 397.68063
     KIA_WG_SETPOINT: 84.99886
-    KIA_WG_VOLTAGE: 1.33791
+    KIA_WG_VOLTAGE: 1.14748
   response: |-
     7E8105B62E021FE9FCE
-    7E821FF0000602A4E30
-    7E8224D301226260918
-    7E82307BC09000A4A07
+    7E821FF00006029E02E
+    7E822E02E3E25EC0906
+    7E8230859098B0A0D09
+    7E82405000000A01000
+    7E82500000079000000
+    7E8269E4D4A18000000
+    7E827000000001D6058
+    7E8282BFE8336663600
+    7E829220027401C0019
+    7E82AC01EFF00000080
+    7E82B5A37F7F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.96604
+    KIA_WG_DUTY: 68.09491
+    KIA_WG_POSITION: 394.89128
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.12306
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000602A1E30
+    7E8221D30FC28E30818
+    7E8230D8F131913C90C
+    7E82455000000A01000
+    7E82500000079000000
+    7E8268E4E081C000000
+    7E827000000401CC057
+    7E82829FCBA36663600
+    7E829220027401C0019
+    7E82A801EFF00000040
+    7E82B5AF9F6F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.76574
+    KIA_WG_DUTY: 68.77546
+    KIA_WG_POSITION: 2.2034
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15236
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000602CB732
+    7E822B132302C2C0947
+    7E82317BE2487238216
+    7E8249A010000A01000
+    7E8250000007D000000
+    7E8265B4F3C1F000000
+    7E827000000601D8058
+    7E82808016936663600
+    7E829220027401C0019
+    7E82AA01EFF00000080
+    7E82B5A3EF600376636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.62451
+    KIA_WG_DUTY: 68.96773
+    KIA_WG_POSITION: 3.57061
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.14748
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00008029022F
+    7E822012F9A257E099C
+    7E823066F06EF062007
+    7E82400000000A01000
+    7E82500000079000000
+    7E826B54DA618000000
+    7E827000000601D6058
+    7E82847024936663600
+    7E829220027401C0019
+    7E82AA01EFF00000060
+    7E82B5ADCF7F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.63293
+    KIA_WG_DUTY: 68.78767
+    KIA_WG_POSITION: 0.64088
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.1426
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00008029092F
+    7E822082F5325FE092C
+    7E823078208B0092B08
+    7E82404000000A01000
+    7E82500000079000000
+    7E826A44D5F18000000
+    7E827000000001D4058
+    7E8280C006936663600
+    7E829220027401C0019
+    7E82AC01EFF00000080
+    7E82B5A37F7F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.64135
+    KIA_WG_DUTY: 71.97681
+    KIA_WG_POSITION: 390.25864
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.18654
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00008029102F
+    7E8220F2FA1257709F0
+    7E823087C09110A7C09
+    7E82401000000A01000
+    7E82500000079000000
+    7E826B74DAD18000000
+    7E827000000A01E605C
+    7E82821F9C336663600
+    7E829220027401C0019
+    7E82A801FFF00000040
+    7E82B5D540069366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.69065
+    KIA_WG_DUTY: 71.14061
+    KIA_WG_POSITION: 397.71725
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.22316
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00008029392F
+    7E822382F9325390C88
+    7E823072108440B700A
+    7E82402000000A01000
+    7E82500000079000000
+    7E826B44D9F18000000
+    7E827000000981F505B
+    7E8280FFE8936663600
+    7E829220027401C0019
+    7E82A4020FF00000020
+    7E82B5DFCFB9E366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.92876
+    KIA_WG_DUTY: 69.56893
+    KIA_WG_POSITION: 395.12932
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.13771
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00008029FF2E
+    7E822FE2EA12538098A
+    7E82307A807F207D307
+    7E82400000000A01000
+    7E82500000079000000
+    7E826B74DAD18000000
+    7E827000000601D2059
+    7E8280CFCE136663600
+    7E829220027401C0019
+    7E82AA01EFF00000060
+    7E82B5A45F8F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.04661
+    KIA_WG_DUTY: 68.78767
+    KIA_WG_POSITION: 0.64088
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.1426
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000802A6130
+    7E8226030C3290709C5
+    7E823108C17ED165310
+    7E82484000000A01000
+    7E82500000079000000
+    7E826C04ECF1C000000
+    7E827000000001D4058
+    7E8280C006936663600
+    7E829220027401C0019
+    7E82AC01EFF00000080
+    7E82B5A24F7F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.43504
+    KIA_WG_DUTY: 48.51148
+    KIA_WG_POSITION: 18.82963
+    KIA_WG_SETPOINT: 49.28054
+    KIA_WG_VOLTAGE: 1.16701
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000802BA431
+    7E822A3316125400843
+    7E8230B6C169814570A
+    7E8246C000000A01000
+    7E82500000079000000
+    7E826A74D6D18000000
+    7E827000000001DE03E
+    7E828180C0D1F8A1F00
+    7E829220027401C0019
+    7E82AC01EFF00000000
+    7E82B41A9071F1F8A1F
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.886
+    KIA_WG_DUTY: 71.94934
+    KIA_WG_POSITION: 393.71939
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.21584
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000802D1B34
+    7E8221B342C30CF0820
+    7E8231D0028D024CE1A
+    7E824F601B900A01000
+    7E8250000007B000000
+    7E82616503923000000
+    7E827000000981F205C
+    7E82818FBFA36663600
+    7E829220027401C0019
+    7E82A4020FF00000060
+    7E82B5D21FFC3366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.69065
+    KIA_WG_DUTY: 27.34417
+    KIA_WG_POSITION: 1.46487
+    KIA_WG_SETPOINT: 3.12505
+    KIA_WG_VOLTAGE: 1.27443
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000A029392F
+    7E822382F9B25870930
+    7E823055605CD05A405
+    7E82400000000A01000
+    7E82500000079000000
+    7E826C7583E3B000000
+    7E8270000005820A023
+    7E8280000F002000000
+    7E829220027401C0019
+    7E82AC021FF00000080
+    7E82B24000073020000
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.69667
+    KIA_WG_DUTY: 71.13146
+    KIA_WG_POSITION: 391.67468
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.24514
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000A0293E2F
+    7E8223D2F9A2519098D
+    7E823062C076607C206
+    7E82401000000A01000
+    7E82500000079000000
+    7E826B54DA618000000
+    7E827000000981FE05B
+    7E8280CFAAB36663600
+    7E829220027401C0019
+    7E82A4020FF00000020
+    7E82B5DE2FD84366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.75319
+    KIA_WG_DUTY: 70.37156
+    KIA_WG_POSITION: 0.64088
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.19142
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000C0296D2F
+    7E8226C2FC4259909F9
+    7E82308210ADE0AA109
     7E82406000000A01000
     7E82500000079000000
-    7E826D34D1E19000000
-    7E8270000008022405E
-    7E828D1FAE136663620
-    7E82926E02A801D601A
-    7E82A8825FF00000060
-    7E82B61BBF408376636
-    7E82CE029202F401D40
+    7E826C04DD018000000
+    7E827000000D81E805A
+    7E82813006936663600
+    7E829220027401C0019
+    7E82AE01FFF00000080
+    7E82B5CE4F9C3366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.5096
+    KIA_WG_DUTY: 68.85481
+    KIA_WG_POSITION: 5.48714
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.16701
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000C02BE231
+    7E822E131992C03096D
+    7E8230F411A7F19FB0E
+    7E824C3000000A01000
+    7E82500000079000000
+    7E826754FA51F000000
+    7E827000000801DE058
+    7E82822038336663600
+    7E829220027401C0019
+    7E82AA01EFF00000080
+    7E82B5A8DF600376636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.77243
+    KIA_WG_DUTY: 69.04097
+    KIA_WG_POSITION: 399.24315
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.16213
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E0297D2F
+    7E8227B2FA7256D0971
+    7E82309AD0B3C0CE409
+    7E8240D000000A01000
+    7E82500000079000000
+    7E826B94DB318000000
+    7E827000000601DC058
+    7E8285FFF8336663600
+    7E829220027401C0019
+    7E82AC01EFF00000080
+    7E82B5A8BF8F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.79047
+    KIA_WG_DUTY: 68.925
+    KIA_WG_POSITION: 395.06218
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.16701
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E0298C2F
+    7E8228B2FC5276809FB
+    7E8230AEE0D880E740B
+    7E8241A000000A01000
+    7E82500000079000000
+    7E826404ED11A000000
+    7E827000000601DE058
+    7E82839FCD636663600
+    7E829220027401C0019
+    7E82AC01EFF00000080
+    7E82B5A5AF6F2366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.79407
+    KIA_WG_DUTY: 68.98604
+    KIA_WG_POSITION: 393.19448
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15724
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E0298F2F
+    7E8228C2F3E28A909C0
+    7E8230EA712AB138D0F
+    7E8243D000000A01000
+    7E82500000079000000
+    7E8265E4E4A1B000000
+    7E827000000201DA058
+    7E8284DFBA436663600
+    7E829220027401C0019
+    7E82A601EFF00000060
+    7E82B597A0349366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 1.27149
+    KIA_WG_DUTY: 68.79988
+    KIA_WG_POSITION: 399.24315
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15236
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E02B1C32
+    7E8221B32AC2C0009A1
+    7E82314EE20601FA813
+    7E8243C010000A01000
+    7E82500000079000000
+    7E8267A4FB81F000000
+    7E827000000201D8058
+    7E82810FF8336663600
+    7E829220027401C0019
+    7E82A601EFF00000080
+    7E82B599D0349366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 2.24196
+    KIA_WG_DUTY: 69.73373
+    KIA_WG_POSITION: 7.40368
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.13771
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E02E4336
+    7E82242364F2FDE082C
+    7E82316122B7928D514
+    7E82424024100A01000
+    7E82500000079000000
+    7E82616505B22000000
+    7E827000000601D2059
+    7E8284204BD36663600
+    7E829220027401C0019
+    7E82AC01EFF00000060
+    7E82B5B18FC1D376636
+    7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
