--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -16,54 +16,8 @@ supported_commands_by_ecu:
   "7D4":
   - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC
   "7E0":
-  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
-  - 0103:FUELSYS1,FUELSYS2
-  - 0104:LOAD_PCT
-  - 0105:ECT
-  - 0106:SHRTFT1
-  - 0107:LONGFT1
-  - 0108:SHRTFT2,SHRTFT4
-  - 0109:LONGFT2,LONGFT4
-  - 010B:MAP
-  - 010C:RPM
-  - 010D:VSS
-  - 010E:SPARKADV
-  - 010F:IAT
-  - 0111:TP
-  - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
-  - 0115:O2S12,SHRTFT11
-  - 0119:O2S22,SHRTFT22
-  - 011C:OBDSUP
-  - 011F:RUNTM
-  - 0121:MIL_DIST
-  - 012E:EVAP_PCT
-  - 012F:FLI
-  - 0130:WARM_UPS
-  - 0131:CLR_DIST
-  - 0133:BARO
-  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
-  - 013C:CATEMP11
-  - 013D:CATEMP21
-  - 013E:CATEMP12
-  - 013F:CATEMP22
-  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
-  - 0142:VPWR
-  - 0143:LOAD_ABS
-  - 0144:EQ_RAT
-  - 0145:TP_R
-  - 0146:AAT
-  - 0147:TP_B
-  - 0149:APP_D
-  - 014A:APP_E
-  - 014C:TAC_PCT
-  - 014D:MIL_TIME
-  - 014E:CLR_TIME
-  - 0155:STSO2FT1
-  - 0156:LGSO2FT1
-  - 0157:STSO2FT2
-  - 0158:LGSO2FT2
-  - 0159:FRP_ABS
   - 7E0.010D:VSS
+  - 7E0.011C:OBDSUP
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
@@ -72,20 +26,6 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
   - 7E0.7E8.22E021:KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_VOLTAGE
-  "7E1":
-  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
-  - 0104:LOAD_PCT
-  - 0105:ECT
-  - 010C:RPM
-  - 010D:VSS
-  - 0111:TP
-  - 011F:RUNTM
-  - 0121:MIL_DIST
-  - 0130:WARM_UPS
-  - 0131:CLR_DIST
-  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
-  - 0142:VPWR
-  - 0149:APP_D
 unsupported_commands_by_ecu:
   "744":
   - 744.74C.22E001|fc=1:KIA_DC_CHRG_STATE
