--- a/tests/test_cases/2021/commands/770.778.22BC03.yaml
+++ b/tests/test_cases/2021/commands/770.778.22BC03.yaml
@@ -1,6 +1,51 @@
 command_id: 770.778.22BC03
 test_cases:
 - expected_values:
+    KIA_BELT_DRIV: 0
+    KIA_BELT_DRIVER: 0
+    KIA_BELT_PASS: 0
+    KIA_BELT_PASSENGER: 0
+    KIA_DOOR_FL: 0
+    KIA_DOOR_FR: 0
+    KIA_DOOR_RL: 0
+    KIA_DOOR_RR: 0
+    KIA_HANDBRAKE: 0
+    KIA_HOOD: 0
+    KIA_TRUNK: 0
+  response: |-
+    778100B62BC03FDEE20
+    778216200000000AAAA
+- expected_values:
+    KIA_BELT_DRIV: 1
+    KIA_BELT_DRIVER: 1
+    KIA_BELT_PASS: 0
+    KIA_BELT_PASSENGER: 0
+    KIA_DOOR_FL: 0
+    KIA_DOOR_FR: 0
+    KIA_DOOR_RL: 0
+    KIA_DOOR_RR: 0
+    KIA_HANDBRAKE: 0
+    KIA_HOOD: 0
+    KIA_TRUNK: 0
+  response: |-
+    778100B62BC03FDEE20
+    778216200620400AAAA
+- expected_values:
+    KIA_BELT_DRIV: 1
+    KIA_BELT_DRIVER: 1
+    KIA_BELT_PASS: 0
+    KIA_BELT_PASSENGER: 0
+    KIA_DOOR_FL: 0
+    KIA_DOOR_FR: 0
+    KIA_DOOR_RL: 0
+    KIA_DOOR_RR: 0
+    KIA_HANDBRAKE: 0
+    KIA_HOOD: 0
+    KIA_TRUNK: 0
+  response: |-
+    778100B62BC03FDEE20
+    778216200620402AAAA
+- expected_values:
     KIA_BELT_DRIV: 1
     KIA_BELT_DRIVER: 1
     KIA_BELT_PASS: 1
@@ -15,3 +60,33 @@ test_cases:
   response: |-
     778100B62BC03FDEE20
     778216200660000AAAA
+- expected_values:
+    KIA_BELT_DRIV: 0
+    KIA_BELT_DRIVER: 1
+    KIA_BELT_PASS: 0
+    KIA_BELT_PASSENGER: 0
+    KIA_DOOR_FL: 0
+    KIA_DOOR_FR: 1
+    KIA_DOOR_RL: 0
+    KIA_DOOR_RR: 0
+    KIA_HANDBRAKE: 0
+    KIA_HOOD: 0
+    KIA_TRUNK: 0
+  response: |-
+    778100B62BC03FDEE20
+    77821620A600400AAAA
+- expected_values:
+    KIA_BELT_DRIV: 1
+    KIA_BELT_DRIVER: 1
+    KIA_BELT_PASS: 0
+    KIA_BELT_PASSENGER: 0
+    KIA_DOOR_FL: 0
+    KIA_DOOR_FR: 1
+    KIA_DOOR_RL: 0
+    KIA_DOOR_RR: 0
+    KIA_HANDBRAKE: 1
+    KIA_HOOD: 0
+    KIA_TRUNK: 0
+  response: |-
+    778100B62BC03FDEE20
+    77821621A620400AAAA
