--- a/tests/test_cases/2021/commands/770.778.22BC05.yaml
+++ b/tests/test_cases/2021/commands/770.778.22BC05.yaml
@@ -6,7 +6,37 @@ test_cases:
     778100B62BC050F1724
     778210000200000AAAA
 - expected_values:
+    KIA_HAZARD_SW: 0
+  response: |-
+    778100B62BC050F1724
+    778210000600000AAAA
+- expected_values:
+    KIA_HAZARD_SW: 0
+  response: |-
+    778100B62BC050F1724
+    778210000A00000AAAA
+- expected_values:
+    KIA_HAZARD_SW: 0
+  response: |-
+    778100B62BC050F1724
+    778210000E00000AAAA
+- expected_values:
+    KIA_HAZARD_SW: 80
+  response: |-
+    778100B62BC050F1724
+    778210050600000AAAA
+- expected_values:
+    KIA_HAZARD_SW: 80
+  response: |-
+    778100B62BC050F1724
+    778210050E00000AAAA
+- expected_values:
     KIA_HAZARD_SW: 160
   response: |-
     778100B62BC050F1724
     7782100A0200000AAAA
+- expected_values:
+    KIA_HAZARD_SW: 160
+  response: |-
+    778100B62BC050F1724
+    7782100A0E00000AAAA
