--- a/tests/test_cases/2021/commands/7E0.7E8.22E004.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E004.yaml
@@ -2,18 +2,78 @@ command_id: 7E0.7E8.22E004
 test_cases:
 - expected_values:
     KIA_22E004: 100
+  response: "7E8 10 19 62 E0 04 FF FF 03 \n7E8 21 00 FD D1 C8 71 F2 76 \n7E8 22 BB
+    10 FC 80 30 D4 F1 \n7E8 23 F1 20 FF 10 10 AA AA "
+- expected_values:
+    KIA_22E004: 100
   response: |-
     7E8101962E004FFFF03
-    7E82100FDD0C877F476
-    7E822BA10F08030D8F3
-    7E823F320FF1010AAAA
+    7E82100F8D1C473F172
+    7E822B010F88030D0F0
+    7E823F020F01110AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0C077F476
+    7E822B810F08030D8F0
+    7E823F020FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0C871F476
+    7E822B810F08030D8F1
+    7E823F120FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0C871F476
+    7E822BB10F08030D8F1
+    7E823F120FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0C871F476
+    7E822BB10F08030D8F7
+    7E823F120FF1010AAAA
 - expected_values:
     KIA_22E004: 100
   response: |-
     7E8101962E004FFFF03
     7E82100FDD0C877F476
+    7E822B810F08030D8F7
+    7E823F720FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0CC71F476
+    7E822BB10F08030D8F1
+    7E823F120FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD1C871F076
     7E822BA10F08030D8F7
     7E823F720FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD1C871F276
+    7E822B810FC8030D4F1
+    7E823F120FF1010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD1C871F276
+    7E822BA10F08030DCF3
+    7E823F320F51010AAAA
 - expected_values:
     KIA_22E004: 100
   response: |-
@@ -25,6 +85,6 @@ test_cases:
     KIA_22E004: 100
   response: |-
     7E8101962E004FFFF03
-    7E82100FDDDC877F876
-    7E822BA10F08030D8F3
-    7E823F320FF1010AAAA
+    7E82100FDDDC477F276
+    7E822B810F88030D4F0
+    7E823F020FF1010AAAA
