--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -26,6 +26,82 @@ supported_commands_by_ecu:
   - 7DF.0131
   - 7DF.01A6
   "7E0":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0103:FUELSYS1,FUELSYS2
+  - 0104:LOAD_PCT
+  - 0105:ECT
+  - 0106:SHRTFT1
+  - 0107:LONGFT1
+  - 0108:SHRTFT2,SHRTFT4
+  - 0109:LONGFT2,LONGFT4
+  - 010B:MAP
+  - 010C:RPM
+  - 010D:VSS
+  - 010E:SPARKADV
+  - 010F:IAT
+  - 0110:MAF
+  - 0111:TP
+  - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
+  - 0115:O2S12,SHRTFT11
+  - 0119:O2S22,SHRTFT22
+  - 011C:OBDSUP
+  - 011F:RUNTM
+  - 0121:MIL_DIST
+  - 0123:FRP
+  - 0124:LAMBDA11_VOLT,O2S11_VOLT
+  - 012C:EGR_PCT
+  - 012D:EGR_ERR
+  - 012E:EVAP_PCT
+  - 012F:FLI
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
+  - 0132:EVAP_VP
+  - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
+  - 013C:CATEMP11
+  - 013D:CATEMP21
+  - 013E:CATEMP12
+  - 013F:CATEMP22
+  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - 0142:VPWR
+  - 0143:LOAD_ABS
+  - 0144:EQ_RAT
+  - 0145:TP_R
+  - 0146:AAT
+  - 0147:TP_B
+  - 0149:APP_D
+  - 014A:APP_E
+  - 014C:TAC_PCT
+  - 014D:MIL_TIME
+  - 014E:CLR_TIME
+  - 014F:MAX_EQ_RAT,MAX_MAP,MAX_O2_CURR,MAX_O2_VOLT
+  - 0150:MAX_MAF
+  - 0151:FUEL_TYP
+  - 0155:STSO2FT1
+  - 0156:LGSO2FT1
+  - 0157:STSO2FT2
+  - 0158:LGSO2FT2
+  - 0159:FRP_ABS
+  - 015C:EOT
+  - 015D:FUEL_TIMING
+  - 015E:FUEL_RATE
+  - 0161:TQ_DD
+  - 0162:TQ_ACT
+  - 0163:TQ_REF
+  - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
+  - 0166:MAFA,MAFA_SUP,MAFB,MAFB_SUP
+  - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - 016C:CTAC_A_SUP,CTAC_B_SUP,RTP_A_SUP,RTP_B_SUP,TAC_A_CMD,TAC_B_CMD,TP_A_REL,TP_B_REL
+  - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
+  - 0172:WG_A_ACT,WG_A_ACT_SUP,WG_A_CMD,WG_A_CMD_SUP,WG_B_ACT,WG_B_ACT_SUP,WG_B_CMD,WG_B_CMD_SUP
+  - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
+  - 018E:TQ_FR
+  - 019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 019E:EXH_RATE
+  - 01A6:ODO
   - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 7E0.0103:FUELSYS1,FUELSYS2
   - 7E0.0104:LOAD_PCT
@@ -87,6 +163,20 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E021:KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_VOLTAGE
   - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0104:LOAD_PCT
+  - 0105:ECT
+  - 010C:RPM
+  - 010D:VSS
+  - 0111:TP
+  - 011C:OBDSUP
+  - 011F:RUNTM
+  - 0121:MIL_DIST
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
+  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - 0142:VPWR
+  - 0149:APP_D
   - 7E1.7E9.010C
   - 7E1.7E9.010D
   - 7E1.7E9.0131
